  --------------------------  HepMC-2.06.05  --------------------------
2011-04-21  Lynn Garren

      * HepMC/GenVertex.h: add #include <cstddef> for bug #80400

2011-04-15  Lynn Garren

      * test/testFlow.cc, test/testPrintBug.cc: define units
      * test/*.sh.in: make sure comparisons work for allowed
        momentum and length combinations

  --------------------------  HepMC-2.06.04  --------------------------
2011-01-04  Lynn Garren

      * src/HeavyIon.cc, src/PdfInfo.cc: throw if there is an invalid line type
      * test/testHepMC.cc.in, test/testStreamIO.cc.in, test/testHepMCVarious.input: 
        provoke a problem with HeavyIon  (see bug #76527)

  --------------------------  HepMC-2.06.03  --------------------------
2010-10-22  Lynn Garren

      * test/testPolarization.cc: verify that Polarization is copied and written

2010-10-20  Lynn Garren

      * src/GenParticle.cc: copy flow when using the copy constructor
      * test/testFlow.cc: add check to be sure flow is copied

  --------------------------  HepMC-2.06.02  --------------------------
2010-08-18  Lynn Garren

      * src/GenEventStreamIO.cc, StreamHelpers.cc: 
        cleanup unassociated event remnants if corrupt data is found

2010-07-30  Lynn Garren & Andy Buckley

      * src/GenEventStreamIO.cc: create GenCrossSection, PdfInfo, and HeavyIon
        on the stack rather than the heap to fix a memory leak

  --------------------------  HepMC-2.06.01  --------------------------
2010-06-01  Lynn Garren

      * HepMC/GenRanges.h: remove ConstGenVertexParticleRange since 
        there is neither a GenVertex::particle_const_iterator nor a 
        GenVertex::vertex_const_iterator 
      * HepMC/GenVertex.h: remove unimplemented 
        ConstGenVertexParticleRange particles()


  --------------------------  HepMC-2.06.00  --------------------------
  --------------------------  HepMC-2.06.00.b02  --------------------------
2010-05-13  Lynn Garren
