@@ -1,3 +1,8 @@
+
+2011-10-25  Lynn Garren
+
+     * fio/PythiaWrapper.cc: remove struct definitions
+
   --------------------------  HepMC-2.06.05  --------------------------
 2011-04-21  Lynn Garren
 
